@@ -35,3 +35,5 @@ let add_path_for mdl dir =
 
 (* Used by emacs ? *)
 let emacs = ref false
+
+let machine_readable = ref false
